# GaussianBeam

./: .gitignore  AUTHORS  CMakeLists.txt  GaussianBeam.cpp  GaussianBeam.h  GaussianBeam.pro  GaussianBeamDelegate.cpp  GaussianBeamDelegate.h  GaussianBeamForm.ui  GaussianBeamModel.cpp  GaussianBeamModel.h  GaussianBeamPlot.cpp  GaussianBeamPlot.h  GaussianBeamWidget.cpp  GaussianBeamWidget.h  GaussianBeamWidgetSave.cpp  GaussianBeam_fr.ts  INSTALL  OpticsView.cpp  OpticsView.h  README.md  Statistics.h  TODO  Unit.cpp  Unit.h  aqt-list.sh  main.cpp  release.sh
.github/workflows/: release.yml
apps/: CMakeLists.txt
cmake/: Compiler.cmake  Dependencies.cmake  Package.cmake  Platform.cmake
gui/: GaussianBeam.qrc  GaussianBeamDelegate.cpp  GaussianBeamDelegate.h  GaussianBeamForm.ui  GaussianBeamLoad.cpp  GaussianBeamModel.cpp  GaussianBeamModel.h  GaussianBeamPlot.cpp  GaussianBeamPlot.h  GaussianBeamRessource.qrc  GaussianBeamSave.cpp  GaussianBeamWidget.cpp  GaussianBeamWidget.h  GaussianBeamWidget.ui  GaussianBeamWidgetSave.cpp  GaussianBeamWindow.cpp  GaussianBeamWindow.h  GaussianBeamWindow.ui  Names.cpp  Names.h  OpticsView.cpp  OpticsView.h  OpticsViewProperties.ui  OpticsWidgets.cpp  OpticsWidgets.h  Unit.cpp  Unit.h  main.cpp
gui/xslt/: 1_0_to_1_1.cpp  1_0_to_1_1.xsl  1_1_to_1_2.cpp  1_1_to_1_2.xsl  convertxslt.sh  gaussianbeam_1_2.dtd
include/: IO.h  Utils.h
include/gui/: Names.h
po/: GaussianBeam_fr.ts
src/: Cavity.cpp  Cavity.h  Function.cpp  Function.h  GaussianBeam.cpp  GaussianBeam.h  GaussianFit.cpp  GaussianFit.h  Optics.cpp  Optics.h  OpticsBench.cpp  OpticsBench.h  OpticsFunction.cpp  OpticsFunction.h  Statistics.h  Utils.cpp  Utils.h  lmmin.c
src/gui/: CMakeLists.txt  GaussianBeam.qrc  GaussianBeamDelegate.cpp  GaussianBeamDelegate.h  GaussianBeamLoad.cpp  GaussianBeamModel.cpp  GaussianBeamModel.h  GaussianBeamPlot.cpp  GaussianBeamSave.cpp  GaussianBeamWidget.cpp  GaussianBeamWidget.h  GaussianBeamWindow.cpp  GaussianBeamWindow.h  Names.cpp  Names.h  OpticsView.cpp  OpticsView.h  OpticsWidgets.cpp  OpticsWidgets.h  Unit.cpp  main.cpp
src/gui/xslt/: 1_0_to_1_1.xsl  1_1_to_1_2.xsl
src/lib/: CMakeLists.txt  Cavity.cpp  GaussianBeam.cpp  GaussianFit.cpp  IO.cpp  Optics.cpp  OpticsBench.cpp
src/logic/: CMakeLists.txt  Cavity.cpp  Function.cpp  GaussianBeam.cpp  GaussianFit.cpp  Optics.cpp  OpticsBench.cpp  OpticsFunction.cpp  Utils.cpp  lmmin.c
test/: test.cpp
tests/: 4f-setup-1-1.xml  4f-setup-1-2.xml
www/: index.html
